SFUSA/force-app/main/default/objects/Choice_Case_2nd_Type__c/fields/Access_Group__c.field-meta.xml
<CustomField>
        <fullName>Access_Group__c</fullName>
        <label>Access Group</label>
        <type>TextArea</type>
    </CustomField>