SFUSA/force-app/main/default/objects/Choice_Case_2nd_Type__c/fields/Customer_Priority__c.field-meta.xml
<CustomField>
        <fullName>Customer_Priority__c</fullName>
        <description>Denotes whether user is VIP, Military or Both</description>
        <label>Customer Priority</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>