SFUSA/force-app/main/default/objects/Choice_Case_2nd_Type__c/fields/Language__c.field-meta.xml
<CustomField>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>