SFUSA/force-app/main/default/objects/Choice_Case_2nd_Type__c/fields/Profile_Ids__c.field-meta.xml
<CustomField>
        <fullName>Profile_Ids__c</fullName>
        <inlineHelpText>Profile Name that should NOT see the Picklist Choice</inlineHelpText>
        <label>Profile Ids</label>
        <required>true</required>
        <type>TextArea</type>
    </CustomField>